--- a/index.html
+++ b/index.html
@@ -202,42 +202,163 @@
     </section>
 
     <!-- Services Section -->
+    <!-- Services Section -->
     <section id="services" class="services-section py-5">
       <div class="container">
         <h2 class="text-center mb-4 text-white">Our Services</h2>
         <div class="row">
-          <div class="col-md-6">
-            <ul>
-              <li>
-                <i class="fas fa-hammer"></i> Floor Installation (Vinyl, Tiles,
-                Carpet, Hardwood)
-              </li>
-              <li>
-                <i class="fas fa-paint-roller"></i> Residential and Commercial
-                Painting
-              </li>
-              <li><i class="fas fa-tools"></i> Wall Partitions</li>
-              <li><i class="fas fa-wrench"></i> Plumbing Work</li>
-            </ul>
+          <!-- First Service -->
+          <div
+            class="col-lg-4 col-md-6 mb-4 d-flex flex-column align-items-center"
+          >
+            <div class="service-icon mb-3">
+              <img
+                src="service-floor.jpg"
+                alt="Floor Installation"
+                class="img-fluid rounded-circle"
+                style="width: 150px; height: 150px; object-fit: cover"
+              />
+            </div>
+            <h4 class="text-center">Floor Installation</h4>
+            <p class="text-center">Vinyl, Tiles, Carpet, Hardwood</p>
           </div>
-          <div class="col-md-6">
-            <ul>
-              <li><i class="fas fa-seedling"></i> Artificial Turf</li>
-              <li><i class="fas fa-walking"></i> Side Walks</li>
-              <li>
-                <i class="fas fa-ruler-combined"></i> Vinyl and Hardwood Fences
-              </li>
-              <li>
-                <i class="fas fa-file-alt"></i> Final Grading with City
-                Certificate
-              </li>
-              <li><i class="fas fa-tree"></i> Composite and Hardwood Decks</li>
-              <li><i class="fas fa-th-large"></i> Patios</li>
-            </ul>
+
+          <!-- Second Service -->
+          <div
+            class="col-lg-4 col-md-6 mb-4 d-flex flex-column align-items-center"
+          >
+            <div class="service-icon mb-3">
+              <img
+                src="service-painting.jpg"
+                alt="Painting"
+                class="img-fluid rounded-circle"
+                style="width: 150px; height: 150px; object-fit: cover"
+              />
+            </div>
+            <h4 class="text-center">Painting</h4>
+            <p class="text-center">Residential and Commercial Painting</p>
+          </div>
+
+          <!-- Third Service -->
+          <div
+            class="col-lg-4 col-md-6 mb-4 d-flex flex-column align-items-center"
+          >
+            <div class="service-icon mb-3">
+              <img
+                src="service-wall.jpg"
+                alt="Wall Partitions"
+                class="img-fluid rounded-circle"
+                style="width: 150px; height: 150px; object-fit: cover"
+              />
+            </div>
+            <h4 class="text-center">Wall Partitions</h4>
+            <p class="text-center">Custom wall partitions for any space</p>
+          </div>
+
+          <!-- Fourth Service -->
+          <div
+            class="col-lg-4 col-md-6 mb-4 d-flex flex-column align-items-center"
+          >
+            <div class="service-icon mb-3">
+              <img
+                src="service-plumbing.jpg"
+                alt="Plumbing Work"
+                class="img-fluid rounded-circle"
+                style="width: 150px; height: 150px; object-fit: cover"
+              />
+            </div>
+            <h4 class="text-center">Plumbing Work</h4>
+            <p class="text-center">Residential and commercial plumbing</p>
+          </div>
+
+          <!-- Fifth Service -->
+          <div
+            class="col-lg-4 col-md-6 mb-4 d-flex flex-column align-items-center"
+          >
+            <div class="service-icon mb-3">
+              <img
+                src="service-turf.jpg"
+                alt="Artificial Turf"
+                class="img-fluid rounded-circle"
+                style="width: 150px; height: 150px; object-fit: cover"
+              />
+            </div>
+            <h4 class="text-center">Artificial Turf</h4>
+            <p class="text-center">
+              Durable and lush synthetic grass installations
+            </p>
+          </div>
+
+          <!-- Sixth Service -->
+          <div
+            class="col-lg-4 col-md-6 mb-4 d-flex flex-column align-items-center"
+          >
+            <div class="service-icon mb-3">
+              <img
+                src="service-sidewalk.jpg"
+                alt="Side Walks"
+                class="img-fluid rounded-circle"
+                style="width: 150px; height: 150px; object-fit: cover"
+              />
+            </div>
+            <h4 class="text-center">Side Walks</h4>
+            <p class="text-center">
+              High-quality sidewalks for residential and public areas
+            </p>
+          </div>
+
+          <!-- Seventh Service -->
+          <div
+            class="col-lg-4 col-md-6 mb-4 d-flex flex-column align-items-center"
+          >
+            <div class="service-icon mb-3">
+              <img
+                src="service-fence.jpg"
+                alt="Vinyl and Hardwood Fences"
+                class="img-fluid rounded-circle"
+                style="width: 150px; height: 150px; object-fit: cover"
+              />
+            </div>
+            <h4 class="text-center">Vinyl and Hardwood Fences</h4>
+            <p class="text-center">Sturdy and aesthetically pleasing fences</p>
+          </div>
+
+          <!-- Eighth Service -->
+          <div
+            class="col-lg-4 col-md-6 mb-4 d-flex flex-column align-items-center"
+          >
+            <div class="service-icon mb-3">
+              <img
+                src="service-grading.jpg"
+                alt="Final Grading"
+                class="img-fluid rounded-circle"
+                style="width: 150px; height: 150px; object-fit: cover"
+              />
+            </div>
+            <h4 class="text-center">Final Grading</h4>
+            <p class="text-center">Final grading with city certification</p>
+          </div>
+
+          <!-- Ninth Service -->
+          <div
+            class="col-lg-4 col-md-6 mb-4 d-flex flex-column align-items-center"
+          >
+            <div class="service-icon mb-3">
+              <img
+                src="service-deck.jpg"
+                alt="Decks & Patios"
+                class="img-fluid rounded-circle"
+                style="width: 150px; height: 150px; object-fit: cover"
+              />
+            </div>
+            <h4 class="text-center">Decks & Patios</h4>
+            <p class="text-center">Composite, hardwood decks, and patios</p>
           </div>
         </div>
       </div>
     </section>
+
+    <!-- Contact Section -->
 
     <!-- Contact Section -->
     <section id="contact" class="contact-section py-5">
@@ -254,7 +375,7 @@
                     style="color: #5f9d07"
                   ></i
                   ><br />
-                  +1 204-998-4648, +1 825-888-5853
+                  +1 204-998-4648, +1 825-888-5853
                 </p>
                 <p class="card-text">
                   <i
