--- a/index.html
+++ b/index.html
@@ -203,20 +203,30 @@
 
     <!-- Services Section -->
     <!-- Services Section -->
-    <section id="services" class="services-section py-5">
-      <div class="container">
+    <!-- Services Section -->
+    <!-- Services Section -->
+    <!-- Services Section -->
+
+    <!-- Services Section -->
+    <!-- Services Section -->
+    <section
+      id="services"
+      class="services-section py-5"
+      style="font-family: Helvetica, sans-serif"
+    >
+      <div class="container-fluid px-5">
         <h2 class="text-center mb-4 text-white">Our Services</h2>
-        <div class="row">
+        <div class="row justify-content-center mb-4">
           <!-- First Service -->
           <div
-            class="col-lg-4 col-md-6 mb-4 d-flex flex-column align-items-center"
+            class="col-lg-2 col-md-6 mb-4 d-flex flex-column align-items-center"
           >
             <div class="service-icon mb-3">
               <img
                 src="service-floor.jpg"
                 alt="Floor Installation"
                 class="img-fluid rounded-circle"
-                style="width: 150px; height: 150px; object-fit: cover"
+                style="width: 120px; height: 120px; object-fit: cover"
               />
             </div>
             <h4 class="text-center">Floor Installation</h4>
@@ -225,14 +235,14 @@
 
           <!-- Second Service -->
           <div
-            class="col-lg-4 col-md-6 mb-4 d-flex flex-column align-items-center"
+            class="col-lg-2 col-md-6 mb-4 d-flex flex-column align-items-center"
           >
             <div class="service-icon mb-3">
               <img
                 src="service-painting.jpg"
                 alt="Painting"
                 class="img-fluid rounded-circle"
-                style="width: 150px; height: 150px; object-fit: cover"
+                style="width: 120px; height: 120px; object-fit: cover"
               />
             </div>
             <h4 class="text-center">Painting</h4>
@@ -241,14 +251,14 @@
 
           <!-- Third Service -->
           <div
-            class="col-lg-4 col-md-6 mb-4 d-flex flex-column align-items-center"
+            class="col-lg-2 col-md-6 mb-4 d-flex flex-column align-items-center"
           >
             <div class="service-icon mb-3">
               <img
                 src="service-wall.jpg"
                 alt="Wall Partitions"
                 class="img-fluid rounded-circle"
-                style="width: 150px; height: 150px; object-fit: cover"
+                style="width: 120px; height: 120px; object-fit: cover"
               />
             </div>
             <h4 class="text-center">Wall Partitions</h4>
@@ -257,30 +267,31 @@
 
           <!-- Fourth Service -->
           <div
-            class="col-lg-4 col-md-6 mb-4 d-flex flex-column align-items-center"
+            class="col-lg-2 col-md-6 mb-4 d-flex flex-column align-items-center"
           >
             <div class="service-icon mb-3">
               <img
                 src="service-plumbing.jpg"
                 alt="Plumbing Work"
                 class="img-fluid rounded-circle"
-                style="width: 150px; height: 150px; object-fit: cover"
+                style="width: 120px; height: 120px; object-fit: cover"
               />
             </div>
             <h4 class="text-center">Plumbing Work</h4>
             <p class="text-center">Residential and commercial plumbing</p>
           </div>
-
+        </div>
+        <div class="row justify-content-center">
           <!-- Fifth Service -->
           <div
-            class="col-lg-4 col-md-6 mb-4 d-flex flex-column align-items-center"
+            class="col-lg-2 col-md-6 mb-4 d-flex flex-column align-items-center"
           >
             <div class="service-icon mb-3">
               <img
                 src="service-turf.jpg"
                 alt="Artificial Turf"
                 class="img-fluid rounded-circle"
-                style="width: 150px; height: 150px; object-fit: cover"
+                style="width: 120px; height: 120px; object-fit: cover"
               />
             </div>
             <h4 class="text-center">Artificial Turf</h4>
@@ -291,14 +302,14 @@
 
           <!-- Sixth Service -->
           <div
-            class="col-lg-4 col-md-6 mb-4 d-flex flex-column align-items-center"
+            class="col-lg-2 col-md-6 mb-4 d-flex flex-column align-items-center"
           >
             <div class="service-icon mb-3">
               <img
                 src="service-sidewalk.jpg"
                 alt="Side Walks"
                 class="img-fluid rounded-circle"
-                style="width: 150px; height: 150px; object-fit: cover"
+                style="width: 120px; height: 120px; object-fit: cover"
               />
             </div>
             <h4 class="text-center">Side Walks</h4>
@@ -309,14 +320,14 @@
 
           <!-- Seventh Service -->
           <div
-            class="col-lg-4 col-md-6 mb-4 d-flex flex-column align-items-center"
+            class="col-lg-2 col-md-6 mb-4 d-flex flex-column align-items-center"
           >
             <div class="service-icon mb-3">
               <img
                 src="service-fence.jpg"
                 alt="Vinyl and Hardwood Fences"
                 class="img-fluid rounded-circle"
-                style="width: 150px; height: 150px; object-fit: cover"
+                style="width: 120px; height: 120px; object-fit: cover"
               />
             </div>
             <h4 class="text-center">Vinyl and Hardwood Fences</h4>
@@ -325,14 +336,14 @@
 
           <!-- Eighth Service -->
           <div
-            class="col-lg-4 col-md-6 mb-4 d-flex flex-column align-items-center"
+            class="col-lg-2 col-md-6 mb-4 d-flex flex-column align-items-center"
           >
             <div class="service-icon mb-3">
               <img
                 src="service-grading.jpg"
                 alt="Final Grading"
                 class="img-fluid rounded-circle"
-                style="width: 150px; height: 150px; object-fit: cover"
+                style="width: 120px; height: 120px; object-fit: cover"
               />
             </div>
             <h4 class="text-center">Final Grading</h4>
@@ -341,14 +352,14 @@
 
           <!-- Ninth Service -->
           <div
-            class="col-lg-4 col-md-6 mb-4 d-flex flex-column align-items-center"
+            class="col-lg-2 col-md-6 mb-4 d-flex flex-column align-items-center"
           >
             <div class="service-icon mb-3">
               <img
                 src="service-deck.jpg"
                 alt="Decks & Patios"
                 class="img-fluid rounded-circle"
-                style="width: 150px; height: 150px; object-fit: cover"
+                style="width: 120px; height: 120px; object-fit: cover"
               />
             </div>
             <h4 class="text-center">Decks & Patios</h4>
@@ -357,6 +368,16 @@
         </div>
       </div>
     </section>
+
+    <!-- Contact Section -->
+
+    <!-- Contact Section -->
+
+    <!-- Contact Section -->
+
+    <!-- Contact Section -->
+
+    <!-- Contact Section -->
 
     <!-- Contact Section -->
 
